--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dev_dependencies:
 
   mocktail: ^1.0.4
   golden_toolkit: ^0.15.0
+  network_image_mock: ^2.1.1
 
   plugin_platform_interface: ^2.1.8
   video_player_platform_interface: ^6.6.0
